[package]
name = "imago"
version = "1.0.0"
edition = "2021"
authors = ["Imago Contributors"]
description = "High-performance CLI image generator using Gemini Image Generation API with terminal preview"
license = "MIT"
repository = "https://github.com/parkjangwon/imago"
keywords = ["cli", "image", "gemini", "ai", "terminal"]
categories = ["command-line-utilities", "multimedia::images"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# Terminal image display
viuer = "0.9"

# Image processing
image = "0.25"

# Base64 encoding/decoding
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Terminal colors for pretty output
colored = "3.0"

# Random generation for filenames
rand = "0.8"

# Date/time for filename generation
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
strip = true

[[bin]]
name = "imago"
path = "src/main.rs"
